Add Montserrat font and update UI components with react-icons for improved styling

--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -1,1 +1,7 @@
 @import "tailwindcss";
+body {
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 00;
+    font-style: normal;
+  }
